# CloudHarbor

./: .gitignore  Dockerfile  Dockerfile-setup  README.md  base.html  fly-setup.toml  fly.toml  pyproject.toml  requirements.txt
WebAppTeam4/: .gitignore  env.example.txt  manage.py
WebAppTeam4/WebAppTeam4/: asgi.py  settings.py  urls.py  wsgi.py
WebAppTeam4/contacts/: admin.py  forms.py  models.py  urls.py  views.py
WebAppTeam4/contacts/migrations/: 0001_initial.py  0002_rename_name_contact_first_name.py  0003_alter_contact_description.py
WebAppTeam4/contacts/static/contacts/: colors.css  style.css
WebAppTeam4/contacts/static/scripts/: drop-down.js  modal-form.js  tab-list.js
WebAppTeam4/contacts/static/styles/: buttons.css  colors.css  forms.css  icons.css  navbar.css  (+3 more)
WebAppTeam4/files/: apps.py  cron.py  forms.py  models.py  urls.py  utils.py  views.py
WebAppTeam4/files/migrations/: 0001_initial.py  0002_alter_file_category.py  0003_remove_file_category.py  0004_file_category.py  0005_file_size.py  0006_alter_file_size.py  0007_file_orig_name.py  0008_file_user.py  0009_file_dropbox_path_alter_file_description.py
WebAppTeam4/news/: cities.py  pb_test.py  reader.py  urls.py  views.py  weath.json
WebAppTeam4/notes/: admin.py  forms.py  models.py  urls.py  views.py
WebAppTeam4/notes/migrations/: 0001_initial.py
WebAppTeam4/notes/templatetags/: extract_tags.py
WebAppTeam4/users/: forms.py  urls.py  views.py
files/: forms.py  models.py  views.py
files/migrations/: 0001_initial.py
files/templates/files/: edit.html  files.html  upload.html
(+38 files in other folders)
