[tool.poetry]
name = "WebAppTeam4"
version = "0.1.0"
description = "Personal Assisitant web-application (Contacts, Notes, File-storage, Newsfeed)"
authors = ["Petrenko-Anton <antonpetrenko3116@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
django-environ = "^0.11.0"
dropbox = "^11.36.2"
oauth2 = "^1.9.0.post1"
SQLAlchemy = "^2.0.20"
bs4 = "^0.0.1"
psycopg2 = "^2.9.7"
django-redis = "^5.3.0"
lxml = "^4.9.3"
getuseragent = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
